src/frontend/src/assets/main.css
/* @import './base.css'; */

/* #app {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  font-weight: normal;
} */

/* a,
.green {
  text-decoration: none;
  color: hsla(160, 100%, 37%, 1);
  transition: 0.4s;
  padding: 3px;
}

@media (hover: hover) {
  a:hover {
    background-color: hsla(160, 100%, 37%, 0.2);
  }
} */

/* @media (min-width: 1024px) {
  body {
    display: flex;
    place-items: center;
  }

  #app {
    display: grid;
    grid-template-columns: 1fr 1fr;
    padding: 0 2rem;
  }
} */

p {
  font-size: 1.2em
}

.body--dark * {
  font-weight: 500;
}

.body--dark a {
  color: #51bef4;
}

.link {
  cursor:pointer;
  color:blue;
  text-decoration:underline;
}

.body--dark .link {
  color: #51bef4;
}

.body--dark {
  color: #cecece !important;
}

.body--dark .q-field__messages [role="alert"] {
  color: #ff5353 !important;
  font-weight: 500;
}

.q-notification__message {
  color: white;
}

.body--dark .q-tab {
  color: #e4e4e4;
}

.body--dark .q-card,
.body--dark .q-table {
  color: #cecece;
}

a:hover,
a.q-breadcrumbs__el:hover {
  color: #f27e19 !important;
}

.q-tab:hover {
  color: inherit
}

.q-breadcrumbs__el:hover {
  color: inherit
}

.q-tab__label {
  font-size: 18px !important
}

.q-tooltip {
  font-size: 14px !important
}

.fixedButton {
  position: fixed !important;
  bottom: 80px;
  right: 80px; 
}

.sr-only { 
  border: 0;
  padding: 0;
  margin: 0;
  position: absolute !important;
  height: 1px; 
  width: 1px;
  overflow: hidden;
  clip: rect(1px 1px 1px 1px); /* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
  clip: rect(1px, 1px, 1px, 1px); /*maybe deprecated but we need to support legacy browsers */
  clip-path: inset(50%); /*modern browsers, clip-path works inwards from each corner*/
  white-space: nowrap; /* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
}

h1 {
  font-size: clamp(1rem, 10vw, 4rem) !important;
  line-height: 1 !important;
  font-weight: 400 !important;
  margin-top: 0;
}

h2 {
  font-size: 22px !important;
  line-height: 1 !important;
  margin-bottom: 5px;
  font-weight: 500 !important;
  margin-top: 0;
}

.field-label {
  width: 100px;
  font-size: 14px;
  color: black;
}

.body--dark .field-label {
  color: #cecece;
}

legend {
  font-size: large;
}

.body--dark .cancel-btn {
  color: #41a4f4 !important;
}

.body--dark fieldset {
  border-color: #717070;
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}

.no-link-style {
  color: inherit !important;
  text-decoration: none !important;
}

/* Prevent q-item from applying link color to its contents */
.no-link-style a {
  color: inherit !important;
  text-decoration: none !important;
}

